none: Fix regression in model scaffolding seed setting.